--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "cargo-altvup"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.69.0"
+license = "MIT"
+repository = "https://github.com/xxshady/cargo-altvup"
+readme = "README.md"
 
 [[bin]]
 name = "cargo-altvup"
