--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ name = "cargo-altvup"
 colored = "2.0.0"
 reqwest = { version = "0.11.18", features = ["blocking", "json"] }
 serde = { version = "1.0.163", features = ["derive"] }
+
+[workspace.metadata.release]
+pre-release-commit-message = "release new version: {{version}}"
